--- a/src/modules/tandem-store/components/styles.css
+++ b/src/modules/tandem-store/components/styles.css
@@ -126,19 +126,18 @@
 }
 
 .ais-ClearRefinements {
-  padding: 1rem;
 }
 
 .ais-ClearRefinements > * {
   margin: 0;
   padding: 0 0px;
-  border: 1px solid #d2d2d2;
+  border: 2px solid #d2d2d2;
   background: none;
   line-height: 1;
   color: #333;
   transition: all 0.3s ease;
-  border-radius: 23px;
-  padding: 8px;
+  border-radius: 0px;
+  padding: 6px;
 }
 
 .ais-ClearRefinements-button--disabled {
@@ -158,5 +157,18 @@
 }
 
 .ais-InfiniteHits-loadMore[disabled] {
+  display: none;
+}
+
+.ais-InfiniteHits-loadPrevious[disabled] {
+  display: none;
+}
+
+.ais-RefinementList-showMore {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.ais-RefinementList-showMore[disabled] {
   display: none;
 }
