--- a/src/modules/tandem-store/components/styles.css
+++ b/src/modules/tandem-store/components/styles.css
@@ -17,19 +17,19 @@
 
 @media (min-width: 768px) {
   .ais-InfiniteHits-list {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
 @media (min-width: 900px) {
   .ais-InfiniteHits-list {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 1200px) {
   .ais-InfiniteHits-list {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
@@ -120,6 +120,9 @@
   border-radius: 3px;
 }
 
+.ais-RefinementList-item:hover {
+}
+
 .ais-RefinementList-list {
   grid-gap: 0 2rem;
   grid-template-rows: repeat(5, 1fr);
@@ -131,13 +134,15 @@
 .ais-ClearRefinements > * {
   margin: 0;
   padding: 0 0px;
-  border: 2px solid #d2d2d2;
+  border: 1px solid #1d1b26;
   background: none;
   line-height: 1;
   color: #333;
   transition: all 0.3s ease;
   border-radius: 0px;
   padding: 6px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .ais-ClearRefinements-button--disabled {
@@ -178,3 +183,29 @@
   color: grey; /* Add color property for grey font */
   font-size: 12px; /* Add font-size property for a smaller font */
 }
+
+/* Styles for the checkbox container */
+.ais-RefinementList-label {
+  display: flex;
+  align-items: center;
+}
+
+/* Hover effect for the checkbox */
+.ais-RefinementList-checkbox:hover {
+  outline: 2px solid #ccffff; /* Change this to your preferred highlighting style */
+  background-color: #ccffff;
+}
+
+/* Styles for the checkbox */
+.ais-RefinementList-checkbox {
+  width: 16px; /* Adjust the width as needed */
+  height: 16px; /* Adjust the height as needed */
+}
+
+/* @media (hover: hover) {
+  .ais-RefinementList-checkbox:not(:disabled):hover {
+    background-color: var(--checkbox-hover-color);
+    outline: 6px solid var(--checkbox-hover-color);
+    transform: scale(1.05);
+  }
+} */
