--- a/src/modules/tandem-store/components/styles.css
+++ b/src/modules/tandem-store/components/styles.css
@@ -223,7 +223,7 @@
 
 .rectangular-image:hover {
   transform: scale(
-    1.03
+    1.06
   ); /* Scale the image to 110% on hover (adjust as needed) */
 }
 
@@ -238,4 +238,7 @@
   left: 4%; /* Adjust this value to control the starting point of the border */
   width: 96%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+}
+
+.rectangular.text {
 }
