--- a/src/modules/tandem-store/components/styles.css
+++ b/src/modules/tandem-store/components/styles.css
@@ -221,6 +221,11 @@
   transition: transform 0.3s ease-in-out; /* Add a smooth transition effect */
 }
 
+.fabric-icon {
+  width: 36px; /* Adjust the width as needed */
+  margin-right: 6px;
+}
+
 .rectangular-image:hover {
   transform: scale(
     1.06
