--- a/src/modules/tandem-store/components/styles.css
+++ b/src/modules/tandem-store/components/styles.css
@@ -218,22 +218,30 @@
   }
 } */
 
-.rectangular-image {
-  width: 333px; /* Adjust the width as needed */
+.rectangular-image-container {
+  width: 300px; /* Adjust the width as needed */
   height: 392px; /* Adjust the height as needed */
-  object-fit: cover; /* This property ensures the image maintains its aspect ratio while covering the specified dimensions */
+  overflow: hidden; /* Ensure the image stays within the container */
+  position: relative; /* Establish positioning context for absolutely positioned children */
+  border: 1px solid #ccc; /* Add border styling */
+}
+
+.rectangular-image {
+  width: 100%; /* Make the image fill the container */
+  height: 100%; /* Make the image fill the container */
+  object-fit: cover; /* Maintain aspect ratio while covering the container */
   transition: transform 0.3s ease-in-out; /* Add a smooth transition effect */
+}
+
+.rectangular-image-container:hover .rectangular-image {
+  transform: scale(
+    1.08
+  ); /* Scale the image to 103% on hover (adjust as needed) */
 }
 
 .fabric-icon {
   width: 36px; /* Adjust the width as needed */
   margin-right: 6px;
-}
-
-.rectangular-image:hover {
-  transform: scale(
-    1.03
-  ); /* Scale the image to 110% on hover (adjust as needed) */
 }
 
 .border-bottom {
